--- a/CIT230/demo/index.html
+++ b/CIT230/demo/index.html
@@ -9,24 +9,27 @@
 </head>
 <body>
     <header>
-        <img src="" alt="Profile Picture">
+        <img src="https://cdn.glitch.com/fa496415-f81b-4e77-9bcf-bd50af5524a3%2F40986017_1868681193221750_5233462884771561472_n.jpg?v=1537463098570" alt="Profile Picture">
         <h1>Chloe Hollman</h1>
-        <h2>BYU-Idaho</h2>
+        <h1>BYU-Idaho</h1>
+    </header>
         <nav>
+            <!-- future main menu -->
+        </nav>
+        <main>
+            <h2>CIT 230 - Assignment Portal </h2>
+       
             <ul>
-                <!-- <li>Home</li>
-                <li>page 2</li>
-                <li></li>
-                <li></li>
+               <li><a href="">Lesson 1</a></li>
+                <li><a href="">Lesson 2</a></li>
+                <li><a href="">Lesson 3</a></li>
+                <!-- <li></li>
                 <li></li> -->
             </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>
-            test
-        </h1>
-    </main>
-    <footer></footer>
+        </main>
+    <footer>
+       <p>&copy; 2019 &#9813; Chloe Hollman &#9813; California &#9813; <a href="http://www.byui.edu/online">BYUI Online Learning</a></p>
+       <p>Last Updated: 9/21/19</p>
+    </footer>
 </body>
 </html>
