Added dynamic year to footer

--- a/cit230/index.html
+++ b/cit230/index.html
@@ -28,8 +28,9 @@
             </ul>
         </main>
     <footer>
-       <p>&copy; 2019 &#9813; Chloe Hollman &#9813; California &#9813; <a href="http://www.byui.edu/online">BYUI Online Learning</a></p>
+       <p>&copy; <span id="currentYear"></span> &#9813; Chloe Hollman &#9813; California &#9813; <a href="http://www.byui.edu/online">BYUI Online Learning</a></p>
        <p>Last Updated: 9/21/19</p>
     </footer>
+    <script src="scripts/currentDate.js"></script>
 </body>
 </html>
