--- a/cit230/index.html
+++ b/cit230/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chloe's Homepage</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Mansalva|Noticia+Text&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <header>
@@ -29,7 +30,6 @@
         </main>
     <footer>
        <p>&copy; <span id="currentYear"></span> &#9813; Chloe Hollman &#9813; California &#9813; <a href="http://www.byui.edu/online">BYUI Online Learning</a></p>
-       <p>Last Updated: 9/21/19</p>
     </footer>
     <script src="scripts/currentDate.js"></script>
 </body>
