--- a/cit230/index.html
+++ b/cit230/index.html
@@ -21,7 +21,7 @@
             <h2>CIT 230 - Assignment Portal </h2>
        
             <ul>
-               <li><a href="">Lesson 1</a></li>
+               <li><a href="design-principles.html">Lesson 1</a></li>
                 <li><a href="">Lesson 2</a></li>
                 <li><a href="">Lesson 3</a></li>
                 <!-- <li></li>
