--- a/cit230/lesson2/design-principles.html
+++ b/cit230/lesson2/design-principles.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
-    <!--<link rel="stylesheet" href="styles/medium.css">-->
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
      <link href="https://fonts.googleapis.com/css?family=Mansalva|Noticia+Text&display=swap" rel="stylesheet">
     <title>Design Principles</title>
 </head>
@@ -18,7 +19,7 @@
         <section>
         <ul>
             <h2>Proximity</h2>
-            <img src="https://cdn.glitch.com/fa496415-f81b-4e77-9bcf-bd50af5524a3%2FIMG_2159.PNG?v=1569705668725" alt="Nordstrom"></li>
+            <img src="images/nordstrom.png" alt="Nordstrom"></li>
            <p> Nordstrom uses proximity in it's design by creating a large amount of white and negative space around the website.
                 This creates a simplistic and minimalistic design.</p>
              <p><a href="https://shop.nordstrom.com/">Nordstrom</a></p> 
@@ -27,7 +28,7 @@
         <section id="first">
         <ul>
             <h1>Alignment</h1>
-            <img src="nike.png" alt="Nike">
+            <img src="images/nike.png" alt="Nike">
             <p2>Nike's website uses alignment on it's website by aligning all the advertisments from each other.
                 If you look at the shoe banner they are advertising you can create a perfect straight line from the letters.   
             </p2>
@@ -37,7 +38,7 @@
         <section>
                 <ul>
                     <h2>Contrast</h2>
-                    <img src="https://cdn.glitch.com/fa496415-f81b-4e77-9bcf-bd50af5524a3%2FIMG_2160.PNG?v=1569705716261" alt="Apple">
+                    <img src="images/apple.png" alt="Apple">
                    <p> Apple uses contrast in their website by using white over a black background and vice versa.
                        Apple likes to keep things simple and use two contrasting colors to create a more minimalistic and simple color scheme.
                    </p> 
