--- a/cit230/lesson 3/index.html
+++ b/cit230/lesson 3/index.html
@@ -7,6 +7,8 @@
     <title>Website Plan</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif|Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,7 +30,26 @@
         </nav>
     </header>
     <main>
-        <h1>Index</h1>
+       <!-- <h2>Index</h2> -->
+        <section>
+            <article>
+                <h1>Site Name</h1>
+                <p>Sunny Side Up Weather</p>
+            </article>
+            <article1>
+                <h1>Purpose</h1>
+                <p>The purpose of this website is to display the different temperatures for local beaches in California.
+                </p>
+            </article1>
+            <article>
+                <h1>Site Logo</h1>
+                <img src="images/sunny.png" alt="sun logo">
+            </article>
+            <article1>
+                <h1>Domain Name</h1>
+                <p>sunnysideupweather.com</p>
+            </article1>
+        </section>
     </main>
     <footer></footer>
 </body>
