--- a/cit230/index.html
+++ b/cit230/index.html
@@ -23,7 +23,7 @@
             <ul>
                <li><a href="https://chloehollman.github.io/cit230/lesson2/design-principles.html">Lesson 2</a></li>
                 <li><a href="https://chloehollman.github.io/cit230/lesson3/index.html">Lesson 3</a></li>
-                <li><a href="https://chloehollman.github.io/cit230/lesson4/index.html">Lesson 4</a></li>
+                <li><a href="https://chloehollman.github.io/cit230/lesson4/preston-4.html">Lesson 4</a></li>
                 <!-- <li></li>
                 <li></li> -->
             </ul>
