--- a/cit230/index.html
+++ b/cit230/index.html
@@ -25,6 +25,7 @@
                 <li><a href="https://chloehollman.github.io/cit230/lesson3/index.html">Lesson 3</a></li>
                 <li><a href="https://chloehollman.github.io/cit230/lesson4/preston-4.html">Lesson 4</a></li>
                 <li><a href="https://chloehollman.github.io/cit230/lesson5/preston-5.html">Lesson 5</a></li>
+                <li><a href="https://chloehollman.github.io/cit230/lesson6/preston-6.html">Lesson 6</a></li>
                 <!-- <li></li> -->
             </ul>
         </main>
