--- a/cit230/lesson6/preston-6.html
+++ b/cit230/lesson6/preston-6.html
@@ -121,6 +121,8 @@
     </footer>
     <script src="scripts/main.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src= "scripts/webfontload.js"></script>
 </body>
 
 </html>
