--- a/cit230/lesson8/tablebuild.html
+++ b/cit230/lesson8/tablebuild.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/tablebuild.css">
-    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400&display=swap" rel="stylesheet">
     <title>Table Build</title>
 </head>
 <body>
@@ -39,11 +40,19 @@
     <tr>
         <td>November</td>
         <td>$8,610</td>
+        <td colspan="1">$7,500</td>
+    </tr>
+    <tr>
+        <td><em>Black Friday</em></td>
+        <td colspan="2">$3,200</td>
+    </tr>
+    <tr>
+        <td>December</td>
+        <td>$6,820</td>
         <td>$7,500</td>
     </tr>
     <tr>
-        <td>Black Friday</td>
-        <td colspan="2">$3,200</td>
+        <td colspan="3">Compiled 12.20.2020 by bRauls</td>
     </tr>
 
     </tbody>
