--- a/cit230/lesson7/gallery-7.html
+++ b/cit230/lesson7/gallery-7.html
@@ -45,40 +45,40 @@
             <h2>Gallery</h2>
             <section id="gallery">
             <figure>
-                <img src="http://placekitten.com/300/400" alt="">
-                <figcaption>Cat 1</figcaption>
+                <img src="images/forest.jpg" alt="forest">
+                <figcaption>Forest</figcaption>
             </figure>
             <figure>
-                <img src="http://placekitten.com/301/401" alt="">
-                <figcaption>Cat 2</figcaption>
+                <img src="images/hiking.jpg" alt="">
+                <figcaption>Hiking</figcaption>
             </figure>
             <figure>
-                <img src="http://placekitten.com/304/404" alt="">
-                <figcaption>Cat 3</figcaption>
+                <img src="images/river.jpg" alt="">
+                <figcaption>River</figcaption>
             </figure>
             <figure>
-                <img src="http://placekitten.com/303/403" alt="">
-                <figcaption>Cat 4</figcaption>
+                <img src="images/deer.jpg" alt="">
+                <figcaption>Deer</figcaption>
             </figure>
             <figure>
-                <img src="http://placekitten.com/305/405" alt="">
-                <figcaption>Cat 5</figcaption>
+                <img src="images/snow.jpg" alt="">
+                <figcaption>Snow</figcaption>
             </figure>
             <figure>
-                <img src="http://placekitten.com/310/410" alt="">
-                <figcaption>Cat 6</figcaption>
+                <img src="images/flowers.jpg" alt="">
+                <figcaption>Flowers</figcaption>
             </figure>
             <figure>
-                <img src="http://placekitten.com/302/402" alt="">
-                <figcaption>Cat 7</figcaption>
+                <img src="images/river.jpg" alt="">
+                <figcaption>River</figcaption>
             </figure>
             <figure>
-                <img src="http://placekitten.com/307/407" alt="">
-                <figcaption>Cat 8</figcaption>
+                <img src="images/road.jpg" alt="">
+                <figcaption>Green Road</figcaption>
             </figure>
             <figure>
-                <img src="http://placekitten.com/308/408" alt="">
-                <figcaption>Cat 9</figcaption>
+                <img src="images/lightning.jpg" alt="">
+                <figcaption>Storm</figcaption>
             </figure>
         </section>
             
