--- a/cit230/lesson11/preston.html
+++ b/cit230/lesson11/preston.html
@@ -14,19 +14,19 @@
     <script type="text/javascript" src="scripts/menu.js"></script>
 </head>
 
-<body>
+<body onload="getFiveDayForecast('5604473')">
     <header>Sunny Side Up Weather
         <img class="logo" src="images/sunny.png">
         <!-- <section id="weatherSummary"> -->
-            <div>
+        <div>
 
-            </div>
-            <div>
+        </div>
+        <div>
 
-            </div>
-            <div>
+        </div>
+        <div>
 
-            </div>
+        </div>
         </section>
     </header>
     <nav>
@@ -61,6 +61,10 @@
                             <span id="currentTemp"></span>
                         </p>
                         <p>
+                            <span>High Temp:</span>
+                            <span id="tempHigh"></span>
+                        </p>
+                        <p>
                             <span>Wind Speed:</span>
                             <span id="windSpeed"></span>
                         </p>
@@ -91,14 +95,14 @@
                         </tr>
                         <tr>
                             <td>Forecast</td>
-                            <td id="temp1">60&deg;</td>
-                            <td id="temp2">68&deg;</td>
-                            <td id="temp3">56&deg;</td>
-                            <td id="temp4">52&deg;</td>
-                            <td id="temp5">44&deg;</td>
+                            <td id="temp1"></td>
+                            <td id="temp2"></td>
+                            <td id="temp3"></td>
+                            <td id="temp4"></td>
+                            <td id="temp5"></td>
                         </tr>
                     </table>
-           
+
 
     </main>
     <footer>
@@ -110,7 +114,7 @@
         </div>
     </footer>
     <script src="scripts/main.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/windchill.js"></script>
     <script src="scripts/fivedayforecast.js"></script>
 </body>
 
