--- a/cit230/lesson12/typography.html
+++ b/cit230/lesson12/typography.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Gelasio&display=swap" rel="stylesheet">
 </head>
 <body>
         <header>
@@ -36,7 +37,7 @@
                     <article>
                         <p>This will be used as the Body Font</p>
                     </article>
-               
+                </section>
             </main>
             <footer></footer>
 </body>
